add update endpoint
